include outputs in notebooks

--- a/audit_spatial_fairness.ipynb
+++ b/audit_spatial_fairness.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,9 +42,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N=206418 points\n",
+      "P=127286 positives\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>action_taken</th>\n",
+       "      <th>census_tract</th>\n",
+       "      <th>location</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10003015200</td>\n",
+       "      <td>(39.7070504, -75.5832416)</td>\n",
+       "      <td>39.707050</td>\n",
+       "      <td>-75.583242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6059086502</td>\n",
+       "      <td>(33.8503559, -117.9121351)</td>\n",
+       "      <td>33.850356</td>\n",
+       "      <td>-117.912135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>26163596100</td>\n",
+       "      <td>(42.1014482, -83.1602786)</td>\n",
+       "      <td>42.101448</td>\n",
+       "      <td>-83.160279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>9009165600</td>\n",
+       "      <td>(41.3558996, -72.9323558)</td>\n",
+       "      <td>41.355900</td>\n",
+       "      <td>-72.932356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>36061001200</td>\n",
+       "      <td>(40.7159065, -73.9820936)</td>\n",
+       "      <td>40.715907</td>\n",
+       "      <td>-73.982094</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   action_taken  census_tract                    location        lat  \\\n",
+       "0             1   10003015200   (39.7070504, -75.5832416)  39.707050   \n",
+       "1             1    6059086502  (33.8503559, -117.9121351)  33.850356   \n",
+       "2             1   26163596100   (42.1014482, -83.1602786)  42.101448   \n",
+       "3             1    9009165600   (41.3558996, -72.9323558)  41.355900   \n",
+       "4             3   36061001200   (40.7159065, -73.9820936)  40.715907   \n",
+       "\n",
+       "          lon  \n",
+       "0  -75.583242  \n",
+       "1 -117.912135  \n",
+       "2  -83.160279  \n",
+       "3  -72.932356  \n",
+       "4  -73.982094  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## load the LAR dataset\n",
     "df = load_data('./data/LAR.csv')\n",
@@ -80,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,9 +257,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000 regions\n"
+     ]
+    }
+   ],
    "source": [
     "radii = np.arange(0.05, 1.01, 0.05)\n",
     "regions = create_regions(df, rtree, seeds, radii)\n",
@@ -189,9 +299,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range 4.656030796468258e-07 1963.0672387208906\n",
+      "max likelihood 1963.0672387208906\n",
+      "n=17874, p=14719\n",
+      "rho=0.6166419595190342, rho_in=0.8234866286225803, rho_out=0.5970330532926001\n",
+      "l0max=-137409.18985450186, l1max=-135446.12261578097, statistic=1963.0672387208906\n"
+     ]
+    }
+   ],
    "source": [
     "direction = 'both'\n",
     "# direction = 'less_in'\n",
@@ -205,9 +327,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.920751262805425\n"
+     ]
+    }
+   ],
    "source": [
     "## determine the significance threshold based on a desired signif_level\n",
     "\n",
@@ -220,9 +350,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "695 significant regions\n"
+     ]
+    }
+   ],
    "source": [
     "## identify regions with statistic above statistical significance threshold\n",
     "\n",
@@ -240,9 +378,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41 non-overlapping regions\n"
+     ]
+    }
+   ],
    "source": [
     "def intersects(regionA, regionB):\n",
     "    cA = np.array(id2loc(df, regionA['center']))\n",
@@ -285,9 +431,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "600 7028\n"
+     ]
+    }
+   ],
    "source": [
     "## find smallest, largest regions\n",
     "\n",
@@ -335,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,9 +526,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19.5361762 64.8944045 -161.8508035 -67.1081422\n"
+     ]
+    }
+   ],
    "source": [
     "lat_max = df['lat'].values.max()\n",
     "lat_min = df['lat'].values.min()\n",
@@ -385,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,18 +573,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range 0.0 1313.1253486430214\n",
+      "max likelihood 1313.1253486430214\n",
+      "n=13656, p=11101\n",
+      "rho=0.6166419595190342, rho_in=0.8129027533684827, rho_out=0.6027380915325635\n",
+      "l0max=-137409.18985450186, l1max=-136096.06450585884, statistic=1313.1253486430214\n"
+     ]
+    }
+   ],
    "source": [
     "best_region, max_likeli, statistics = scan_regions(regions, true_types, N, P, verbose=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.900119686091784\n"
+     ]
+    }
+   ],
    "source": [
     "## determine the significance threshold based on a desired signif_level\n",
     "\n",
@@ -435,9 +617,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43 significant regions\n"
+     ]
+    }
+   ],
    "source": [
     "## identify regions with statistic above statistical significance threshold\n",
     "\n",
@@ -475,9 +665,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_score 0.3064977230247631 with 8 points\n",
+      "[0.3064977230247631 0.3064977230247631 0.3064977230247631\n",
+      " 0.3064977230247631 0.3064977230247631]\n"
+     ]
+    }
+   ],
    "source": [
     "## partioning-based scan\n",
     "\n",
@@ -513,9 +713,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8, 7) (7, 12)\n",
+      "148 247\n",
+      "1313.1253486430214 0.9587897912424523\n",
+      "0.06722631979411768 0.3064977230247631\n"
+     ]
+    }
+   ],
    "source": [
     "## best_region vs the_region\n",
     "\n",
@@ -541,9 +752,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19.5361762 64.8944045 -161.8508035 -67.1081422\n"
+     ]
+    }
+   ],
    "source": [
     "lat_max = df['lat'].values.max()\n",
     "lat_min = df['lat'].values.min()\n",
@@ -554,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,9 +803,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean of means=0.0376\n",
+      "max of maxs=0.3351\n"
+     ]
+    }
+   ],
    "source": [
     "mean_scores = []\n",
     "max_scores = []\n",
