--- a/data/LAR/create_LAR.ipynb
+++ b/data/LAR/create_LAR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4dad118f-955c-4c87-824c-482a6deb8c64",
    "metadata": {},
    "outputs": [],
@@ -21,27 +21,339 @@
     "Download data from:  \n",
     "<https://ffiec.cfpb.gov/data-publication/modified-lar/2021>\n",
     "\n",
-    "Make sure 2021 is selected and enter `B4TYDEB6GKMZO031MB27` as the LEI for Bank of America. Then click on \"Download Modified LAR\"."
+    "Make sure 2021 is selected and enter `B4TYDEB6GKMZO031MB27` as the LEI for Bank of America. Opt to \"Include File Header\" and then click on \"Download Modified LAR with Header\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "243abb7d-d599-46bb-b44a-32a4a08e42dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "368728\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/54/_v7k89551fvc9hxwrrdbw_lr0000gn/T/ipykernel_78154/2495106069.py:1: DtypeWarning: Columns (73) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv('B4TYDEB6GKMZO031MB27_header.csv', delimiter='|')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>activity_year</th>\n",
+       "      <th>lei</th>\n",
+       "      <th>loan_type</th>\n",
+       "      <th>loan_purpose</th>\n",
+       "      <th>preapproval</th>\n",
+       "      <th>construction_method</th>\n",
+       "      <th>occupancy_type</th>\n",
+       "      <th>loan_amount</th>\n",
+       "      <th>action_taken</th>\n",
+       "      <th>state_code</th>\n",
+       "      <th>...</th>\n",
+       "      <th>submission_of_application</th>\n",
+       "      <th>initially_payable_to_institution</th>\n",
+       "      <th>aus_1</th>\n",
+       "      <th>aus_2</th>\n",
+       "      <th>aus_3</th>\n",
+       "      <th>aus_4</th>\n",
+       "      <th>aus_5</th>\n",
+       "      <th>reverse_mortgage</th>\n",
+       "      <th>open_end_line_of_credit</th>\n",
+       "      <th>business_or_commercial_purpose</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>B4TYDEB6GKMZO031MB27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>255000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>DE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>B4TYDEB6GKMZO031MB27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>655000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>B4TYDEB6GKMZO031MB27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>875000</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>B4TYDEB6GKMZO031MB27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>515000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>B4TYDEB6GKMZO031MB27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>665000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 85 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   activity_year                   lei  loan_type  loan_purpose  preapproval  \\\n",
+       "0           2021  B4TYDEB6GKMZO031MB27          1             1            2   \n",
+       "1           2021  B4TYDEB6GKMZO031MB27          1             1            2   \n",
+       "2           2021  B4TYDEB6GKMZO031MB27          1             1            1   \n",
+       "3           2021  B4TYDEB6GKMZO031MB27          1            31            2   \n",
+       "4           2021  B4TYDEB6GKMZO031MB27          1            31            2   \n",
+       "\n",
+       "   construction_method  occupancy_type  loan_amount  action_taken state_code  \\\n",
+       "0                    1               1       255000             1         DE   \n",
+       "1                    1               1       655000             2         NV   \n",
+       "2                    1               1       875000             8        NaN   \n",
+       "3                    1               1       515000             1         CA   \n",
+       "4                    1               1       665000             4         CA   \n",
+       "\n",
+       "   ...  submission_of_application  initially_payable_to_institution  aus_1  \\\n",
+       "0  ...                          1                                 1      2   \n",
+       "1  ...                          1                                 1      7   \n",
+       "2  ...                          1                                 1      7   \n",
+       "3  ...                          1                                 1      2   \n",
+       "4  ...                          1                                 1      6   \n",
+       "\n",
+       "   aus_2  aus_3  aus_4  aus_5  reverse_mortgage  open_end_line_of_credit  \\\n",
+       "0    NaN    NaN    NaN    NaN                 2                        2   \n",
+       "1    NaN    NaN    NaN    NaN                 2                        2   \n",
+       "2    NaN    NaN    NaN    NaN                 2                        2   \n",
+       "3    7.0    NaN    NaN    NaN                 2                        2   \n",
+       "4    NaN    NaN    NaN    NaN                 2                        2   \n",
+       "\n",
+       "   business_or_commercial_purpose  \n",
+       "0                               2  \n",
+       "1                               2  \n",
+       "2                               2  \n",
+       "3                               2  \n",
+       "4                               2  \n",
+       "\n",
+       "[5 rows x 85 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_csv('B4TYDEB6GKMZO031MB27.csv')\n",
+    "df = pd.read_csv('B4TYDEB6GKMZO031MB27_header.csv', delimiter='|')\n",
     "print(len(df))\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4a86de90",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "action_taken    int64\n",
+      "census_tract    int64\n",
+      "dtype: object\n",
+      "1    172270\n",
+      "3    110301\n",
+      "Name: action_taken, dtype: int64\n",
+      "50647\n",
+      "282571\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>action_taken</th>\n",
+       "      <th>census_tract</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10003015200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6059086502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>26163596100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>45051051604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>9009165600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   action_taken census_tract\n",
+       "0             1  10003015200\n",
+       "3             1   6059086502\n",
+       "5             1  26163596100\n",
+       "6             1  45051051604\n",
+       "9             1   9009165600"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = df[['action_taken', 'census_tract']]\n",
     "df = df.dropna()\n",
@@ -54,12 +366,14 @@
     "print(df['action_taken'].value_counts())\n",
     "print(df['census_tract'].nunique())\n",
     "\n",
-    "print(len(df))\n"
+    "print(len(df))\n",
+    "\n",
+    "df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "aaaa79a6",
    "metadata": {},
    "outputs": [],
@@ -91,12 +405,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "26837413",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "USPS                                                                                                                                       object\n",
+      "GEOID                                                                                                                                       int64\n",
+      "ALAND                                                                                                                                       int64\n",
+      "AWATER                                                                                                                                      int64\n",
+      "ALAND_SQMI                                                                                                                                float64\n",
+      "AWATER_SQMI                                                                                                                               float64\n",
+      "INTPTLAT                                                                                                                                  float64\n",
+      "INTPTLONG                                                                                                                                 float64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
-    "loc_df = pd.read_csv('2021_Gaz_tracts_national.csv', delimiter='\\t')\n",
+    "loc_df = pd.read_csv('2021_Gaz_tracts_national.txt', delimiter='\\t')\n",
     "print(loc_df.dtypes)\n",
     "# loc_df.head()\n",
     "loc_df.rename(columns={ loc_df.columns[-1]: \"INTPTLONG\" }, inplace = True)\n",
@@ -105,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f8af7734",
    "metadata": {},
    "outputs": [],
@@ -117,10 +447,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5c5aaf59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "206418\n",
+      "1    127286\n",
+      "3     79132\n",
+      "Name: action_taken, dtype: int64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>action_taken</th>\n",
+       "      <th>census_tract</th>\n",
+       "      <th>location</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10003015200</td>\n",
+       "      <td>(39.7070504, -75.5832416)</td>\n",
+       "      <td>39.707050</td>\n",
+       "      <td>-75.583242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6059086502</td>\n",
+       "      <td>(33.8503559, -117.9121351)</td>\n",
+       "      <td>33.850356</td>\n",
+       "      <td>-117.912135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>26163596100</td>\n",
+       "      <td>(42.1014482, -83.1602786)</td>\n",
+       "      <td>42.101448</td>\n",
+       "      <td>-83.160279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>9009165600</td>\n",
+       "      <td>(41.3558996, -72.9323558)</td>\n",
+       "      <td>41.355900</td>\n",
+       "      <td>-72.932356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>3</td>\n",
+       "      <td>36061001200</td>\n",
+       "      <td>(40.7159065, -73.9820936)</td>\n",
+       "      <td>40.715907</td>\n",
+       "      <td>-73.982094</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    action_taken census_tract                    location        lat  \\\n",
+       "0              1  10003015200   (39.7070504, -75.5832416)  39.707050   \n",
+       "3              1   6059086502  (33.8503559, -117.9121351)  33.850356   \n",
+       "5              1  26163596100   (42.1014482, -83.1602786)  42.101448   \n",
+       "9              1   9009165600   (41.3558996, -72.9323558)  41.355900   \n",
+       "10             3  36061001200   (40.7159065, -73.9820936)  40.715907   \n",
+       "\n",
+       "           lon  \n",
+       "0   -75.583242  \n",
+       "3  -117.912135  \n",
+       "5   -83.160279  \n",
+       "9   -72.932356  \n",
+       "10  -73.982094  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# print(df.head(1))\n",
     "# print(df.dtypes)\n",
@@ -147,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a7ee560f",
    "metadata": {},
    "outputs": [],
